--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,4 +33,4 @@ Imports:
     stats
 Depends: 
     R (>= 2.10)
-URL: https://emmaskarstein.github.io/inlamemi/
+URL: https://emmaskarstein.github.io/inlamemi/, https://github.com/emmaSkarstein/inlamemi
