extend with optional missingness model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,9 @@ export(make_inlamemi_formula)
 export(make_inlamemi_scaling_vector)
 export(make_inlamemi_stacks)
 export(show_data_structure)
-export(simplify_inlamemi_model_summary)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,vars)
+importFrom(methods,is)
 importFrom(rlang,.data)
 importFrom(stats,terms)
