--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,6 @@ RoxygenNote: 7.3.1
 Suggests: 
     INLA,
     knitr,
-    methods,
     testthat (>= 3.0.0),
     tibble,
     rmarkdown
@@ -30,7 +29,8 @@ Imports:
     dplyr,
     ggplot2,
     rlang,
-    stats
+    stats,
+    methods
 Depends: 
     R (>= 2.10)
 URL: https://emmaskarstein.github.io/inlamemi/, https://github.com/emmaSkarstein/inlamemi
