--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,4 +15,5 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,vars)
 importFrom(methods,is)
 importFrom(rlang,.data)
+importFrom(scales,parse_format)
 importFrom(stats,terms)
