add cran-comments, some examples

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Missing Data and Measurement Error Modelling in INLA
 Version: 0.1.0
 Authors@R: c(
   person("Emma", "Skarstein", email = "emma@skarstein.no",
-         role = c("cre", "aut"), 
+         role = c("cre", "aut", "cph"), 
          comment = c(ORCID = "0000-0002-6347-855X")),
   person("Stefanie", "Muff",
          role = c("aut"),
