--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(summary,inlamemi)
 export(extract_variables_from_formula)
 export(fit_inlamemi)
 export(make_inlamemi_control.family)
+export(make_inlamemi_families)
 export(make_inlamemi_formula)
 export(make_inlamemi_scaling_vector)
 export(make_inlamemi_stacks)
