--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -13,6 +13,7 @@ reference:
   - nhanes_survival
   - simple_data
   - two_error_data
+  - mar_data
 - title: Summary, plot, etc.
 - contents:
   - summary.inlamemi
@@ -21,6 +22,7 @@ reference:
 - title: Under-the-hood functions
   desc:  Functions called by the model fitting function and the summary/print functions. In some cases, they may be useful to call directly.
 - contents:
+  - extract_random_effects
   - extract_variables_from_formula
   - starts_with("make_")
   - inla_survival_families
