--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,8 @@ Imports:
     rlang,
     stats,
     methods,
-    scales
+    scales,
+    Matrix
 Depends: 
     R (>= 2.10)
 URL: https://emmaskarstein.github.io/inlamemi/, https://github.com/emmaSkarstein/inlamemi
