--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,8 +32,7 @@ Imports:
     rlang,
     stats,
     methods,
-    scales,
-    Matrix
+    scales
 Depends: 
     R (>= 2.10)
 URL: https://emmaskarstein.github.io/inlamemi/, https://github.com/emmaSkarstein/inlamemi
