--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -24,6 +24,7 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
+      RSPM: ${{ matrix.config.rspm }}
 
     steps:
       - uses: actions/checkout@v3
@@ -32,6 +33,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
         with:
+          extra-repositories: 'https://inla.r-inla-download.org/R/stable'
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
@@ -48,7 +50,10 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck
+          dependencies: '"all"'
+          extra-packages: |
+            any::rcmdcheck
+            INLA
           needs: check
 
       - uses: r-lib/actions/check-r-package@v2
